force-app/main/default/objects/Assignment__c/Assignment__c.object-meta.xml
<CustomObject>
    <description>Object used to assign an user to a stage of a project with a defined number of days to consume.</description>
    <label>Assignment</label>
    <nameField>
        <displayFormat>A-{YYYY}-{00000}</displayFormat>
        <label>Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>