force-app/main/default/objects/Assignment__c/fields/ActualChargeDays__c.field-meta.xml
<CustomField>
    <fullName>ActualChargeDays__c</fullName>
    <label>Actual Charge (days)</label>
    <summarizedField>TimesheetEntry__c.Week_Sum__c</summarizedField>
    <summaryFilterItems>
        <field>TimesheetEntry__c.Status__c</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </summaryFilterItems>
    <summaryForeignKey>TimesheetEntry__c.Assignment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>