force-app/main/default/objects/Assignment__c/fields/ActualCostPrice__c.field-meta.xml
<CustomField>
    <fullName>ActualCostPrice__c</fullName>
    <formula>ActualChargeDays__c * DailyCostPrice__c</formula>
    <label>Actual Cost Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>