force-app/main/default/objects/Assignment__c/fields/ActualSalesPrice__c.field-meta.xml
<CustomField>
    <fullName>ActualSalesPrice__c</fullName>
    <formula>ActualChargeDays__c * DailySalesPrice__c</formula>
    <label>Actual Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>