force-app/main/default/objects/Assignment__c/fields/AssignedUser__c.field-meta.xml
<CustomField>
    <fullName>AssignedUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>