force-app/main/default/objects/Assignment__c/fields/DailyCostPrice__c.field-meta.xml
<CustomField>
    <fullName>DailyCostPrice__c</fullName>
    <label>Daily Cost Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>