force-app/main/default/objects/Assignment__c/fields/DailySalesPrice__c.field-meta.xml
<CustomField>
    <fullName>DailySalesPrice__c</fullName>
    <label>Daily Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>