force-app/main/default/objects/Assignment__c/fields/EstimatedCharge__c.field-meta.xml
<CustomField>
    <fullName>EstimatedCharge__c</fullName>
    <label>Estimated Charge (days)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>