force-app/main/default/objects/Assignment__c/fields/EstimatedCostPrice__c.field-meta.xml
<CustomField>
    <fullName>EstimatedCostPrice__c</fullName>
    <formula>EstimatedCharge__c *  DailyCostPrice__c</formula>
    <label>Assignment Cost Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>