force-app/main/default/objects/Assignment__c/fields/EstimatedSalesPrice__c.field-meta.xml
<CustomField>
    <fullName>EstimatedSalesPrice__c</fullName>
    <formula>EstimatedCharge__c *  DailySalesPrice__c</formula>
    <label>Assignment Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>