force-app/main/default/objects/Assignment__c/fields/ExpectedChargesDays__c.field-meta.xml
<CustomField>
    <fullName>ExpectedChargesDays__c</fullName>
    <label>Expected charges (Days)</label>
    <summarizedField>TimesheetEntry__c.Week_Sum__c</summarizedField>
    <summaryForeignKey>TimesheetEntry__c.Assignment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>