force-app/main/default/objects/Assignment__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>ProjectStage__r.Name + &#39;_&#39; +  AssignedUser__r.LastName + &#39;_&#39; +  TEXT(StartDate__c)</formula>
    <label>Assignment Name</label>
    <type>Text</type>
</CustomField>