force-app/main/default/objects/Assignment__c/fields/ProjectName__c.field-meta.xml
<CustomField>
    <fullName>ProjectName__c</fullName>
    <formula>ProjectStage__r.ProjectName__r.Name</formula>
    <label>Project Name</label>
    <type>Text</type>
</CustomField>