force-app/main/default/objects/Assignment__c/fields/ProjectStage__c.field-meta.xml
<CustomField>
    <fullName>ProjectStage__c</fullName>
    <label>Project Stage</label>
    <referenceTo>Project_Stage__c</referenceTo>
    <relationshipLabel>Assignments</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>