force-app/main/default/objects/Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ProjectName__c</columns>
    <columns>AssignedUser__c</columns>
    <columns>StartDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>